BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Product_Information_vod__c.object
<CustomObject>
    <description>Child of Account object with a Lookup relationship. Each record represents an association between an Account and a Product in the Product Catalog.</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the Account object</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Informations</relationshipLabel>
        <relationshipName>Product_Informations_vod</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <description>External ID that can be used for data loading</description>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Information_ID_vod__c</fullName>
        <description>Unique identifier of the Product Information record, auto-generated upon creation.</description>
        <displayFormat>PI-{0000000000}</displayFormat>
        <label>Product Information ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the Product Catalog object</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Product Informations</relationshipLabel>
        <relationshipName>Product_Informations_vod</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Product Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Informations</pluralLabel>
    <recordTypes>
        <fullName>Product_Information_vod</fullName>
        <active>true</active>
        <description>Base record type for Product Information</description>
        <label>Product_Information_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>